Fix for mobile overflow x

--- a/Czytnik/Styles/pages/_home.scss
+++ b/Czytnik/Styles/pages/_home.scss
@@ -1,3 +1,7 @@
+.home-main {
+  overflow-x: hidden;
+}
+
 .home-header {
   &__container {
     position: relative;
